--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "notification-server",
+  "name": "notification-app",
   "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "npm install"
   },
   "dependencies": {
     "json-server": "^0.17.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2"  // Must be present
   },
   "engines": {
     "node": "18.x"
