--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "npm install"
   },
   "dependencies": {
-    "json-server": "^0.17.4",
-    "express": "^4.18.2"  // Must be present
+    "json-server": "0.17.4",
+    "express": "4.18.2"
   },
   "engines": {
     "node": "18.x"
